--- a/src/index.pug
+++ b/src/index.pug
@@ -1,5 +1,6 @@
-extends templates/layout 
+extends templates/layout
 
- block content
-  img(src="img/img1.svg")
-  h1 Awesome Cleaness
+
+block content
+    img(src="img/img1.jpg")
+    h1 Minimalism
